[package]
name = "venmo-gnu-cash"
version = "0.1.0"
authors = ["lights0123 <developer@lights0123.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
csv = "1.1.3"
chrono = { version = "0.4.13", features = ["serde"] }
